--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -8,7 +8,7 @@
     <h2><a class="articleTitle" href="/article/{{ article.id }}">{{ article.title }}</a></h2>
     <p>{{ article.description }}</p>
 	<p>{{ article.categorie }}</p>
-	<img src = '{{article.image}}'/>
+	<img src = '{{app.request.basepath}}/img/{{article.image}}'/>
 	<p class="label label-primary"><br/> {{article.price}}€ </p>
 </article>
 {% endfor %}
