--- a/views/article.html.twig
+++ b/views/article.html.twig
@@ -9,12 +9,20 @@
 	<p>{{ article.categorie }}</p>
 	<img src = '{{app.request.basepath}}/img/{{article.image}}'/>
 	<p class="label label-primary"><br/> {{article.price}}€ </p>
+	
     <h3>Comments</h3>
     {% for comment in comments %}
-        <strong>{{ comment.author }}</strong> said :  {{ comment.content }}<br>
+        <strong>{{ comment.author.username }}</strong> said :  {{ comment.content }}<br>
 		Note : {{ comment.note }}<br>
     {% else %}
         No comments yet.
     {% endfor %}
+	
+	<h3>Add a comment</h3>
+    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+        Soon!
+    {% else %}
+        <a href="{{ path('login') }} ">Log in</a> to add comments.
+    {% endif %}
 </p>
 {% endblock %}
