--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -9,7 +9,7 @@
     <p>{{ article.description }}</p>
 	<p>{{ article.categorie }}</p>
 	<img src = '{{app.request.basepath}}/img/{{article.image}}'/>
-	<p class="label label-primary"><br/> {{article.price}}€ </p>
+	<br/> <p class="label label-primary"> {{article.price}}€ </p>
 </article>
 {% endfor %}
 {% endblock %}
