--- a/views/article.html.twig
+++ b/views/article.html.twig
@@ -6,14 +6,14 @@
 <p>
     <h2>{{ article.title }}</h2>
     <p>{{ article.description }}</p>
-	<p>{{ article.categorie }}</p>
+	<p>{{ article.category }}</p>
 	<img src = '{{app.request.basepath}}/img/{{article.image}}'/>
 	<p class="label label-primary"><br/> {{article.price}}€ </p>
 	
     <h3>Comments</h3>
     {% for comment in comments %}
         <strong>{{ comment.author.username }}</strong> said :  {{ comment.content }}<br>
-		Note : {{ comment.note }}<br>
+		Grade : {{ comment.grade }}<br>
     {% else %}
         No comments yet.
     {% endfor %}
