--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -21,8 +21,13 @@
                     <a class="navbar-brand" href="/">NanarStore</a>
                 </div>
                 <div class="collapse navbar-collapse" id="navbar-collapse-target">
-                    <ul class="nav navbar-nav">
-                        <li class="dropdown">
+                    <ul class="nav navbar-nav">	
+					
+                        {% if app.security.token and is_granted('ROLE_ADMIN') %}
+							<li class="{% if adminMenu is defined %}active{% endif %}"><a href="/admin"><span class="glyphicon glyphicon-cog"></span> Administration</a></li>
+						{% endif %}
+						
+						<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             Catégories <b class="caret"></b></a>
                             <ul class="dropdown-menu">
