--- a/views/article_form.html.twig
+++ b/views/article_form.html.twig
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div class="form-group">
-        {{ form_label(articleForm.content, null, { 'label_attr':  {
+        {{ form_label(articleForm.description, null, { 'label_attr':  {
             'class': 'col-sm-4 control-label'
         }}) }}
         <div class="col-sm-6">
@@ -37,7 +37,7 @@
         </div>
     </div>
 	<div class="form-group">
-        {{ form_label(articleForm.content, null, { 'label_attr':  {
+        {{ form_label(articleForm.category, null, { 'label_attr':  {
             'class': 'col-sm-4 control-label'
         }}) }}
         <div class="col-sm-6">
@@ -49,7 +49,7 @@
         </div>
     </div>
 	<div class="form-group">
-        {{ form_label(articleForm.content, null, { 'label_attr':  {
+        {{ form_label(articleForm.image, null, { 'label_attr':  {
             'class': 'col-sm-4 control-label'
         }}) }}
         <div class="col-sm-6">
@@ -61,7 +61,7 @@
         </div>
     </div>
 	<div class="form-group">
-        {{ form_label(articleForm.content, null, { 'label_attr':  {
+        {{ form_label(articleForm.price, null, { 'label_attr':  {
             'class': 'col-sm-4 control-label'
         }}) }}
         <div class="col-sm-6">
