--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -62,7 +62,7 @@
         </nav>
         <div id="content">{% block content %}{% endblock %}</div>
         <footer class="footer">
-            <a href="https://github.com/bpesquet/OC-MicroCMS">MicroCMS</a> is a minimalistic CMS built as a showcase for modern PHP development.
+            <a href="https://github.com/bpesquet/OC-MicroCMS">NanarStore</a>, le premier site du net à vendre volontairement autant de mauvais films.
         </footer>
     </div>
     
