--- a/views/article.html.twig
+++ b/views/article.html.twig
@@ -29,6 +29,17 @@
                     'placeholder': 'Enter your comment'
                 }}) }}
             </div>
+			
+			<div class="form-group">
+                {{ form_errors(commentForm.grade) }}
+                {{ form_widget(commentForm.grade, { 'attr':  {
+                    'rows': '4',
+                    'class': 'form-control',
+                    'placeholder': 'Enter your grade'
+                }}) }}
+            </div>
+			
+			
             <div class="form-group">
                 <input type="submit" class="btn btn-primary" value="Publish comment" />
             </div>
