--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -32,7 +32,7 @@
                             Catégories <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 {% for category in categories %}
-                                    <li><a href="category/{{ category.name }}">{{ category.name }}</a></li>
+                                    <li><a href="{{ category.name }}">{{ category.name }}</a></li>
                                 {% endfor %}
                             </ul>
                         </li>
