--- a/views/category.html.twig
+++ b/views/category.html.twig
@@ -11,5 +11,12 @@
 	<img src = '{{app.request.basepath}}/img/{{article.image}}'/>
 	<br/> <p class="label label-primary"> {{article.price}}€ </p>
 </article>
+{% else %}
+<article>
+  <div class="alert alert-danger" role="alert">
+    <h2>Sorry, there isn't a movie in this category yet !</h2>
+  </div>
+</article>
+
 {% endfor %}
 {% endblock %}
