--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -29,7 +29,7 @@
 
 						<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Catégories <b class="caret"></b></a>
+                            Categories <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 {% for category in categories %}
                                     <li><a href="{{ path('category', {name: category.name}) }}">{{ category.name }}</a></li>
