--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{{ app.request.basepath }}/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ app.request.basepath }}/css/nanarstore.css" rel="stylesheet">
+    <link href="{{ app.request.basepath }}/lib/bootstrap/css/bootstrap-theme.css" rel="stylesheet">
+
     <title>NanarStore - {% block title %}{% endblock %}</title>
 </head>
 <body>
