--- a/views/basket.html.twig
+++ b/views/basket.html.twig
@@ -1,5 +1,6 @@
 {% extends "layout.html.twig" %}
 
+{% block content %}
 <h1>Votre panier</h1>
 
 <table class="table table-striped">
@@ -14,3 +15,4 @@
     <td>{{ order.quantity }}</td>
   </tr>
 </table>
+{% endblock %}
