--- a/views/basket.html.twig
+++ b/views/basket.html.twig
@@ -7,16 +7,30 @@
 
 <table class="table table-striped">
   <tr>
-    <td><em>Nom du produit</em></td>
-    <td><em>Prix</em></td>
-    <td><em>Quantité</em></td>
+    <td><strong><em>Nom du produit</em></strong></td>
+    <td><strong><em>Prix unitaire</em></strong></td>
+    <td><strong><em>Quantité</em></strong></td>
+    <td><strong><em>Prix total</em></strong></td>
+    <td></td>
   </tr>
-  {% for order in orders %}
+
+  {% set total = 0 %}
+  {% for article in articles %}
   <tr>
-      <td>{{ order.userId }}</td>
-      <td>{{ order.articleId }}</td>
-      <td>{{ order.quantity }}</td>
+      <td>{{ article.title }}</td>
+      <td>{{ article.price }}</td>
+      <td>{{ orders[article.id].quantity }}</td>
+      <td>{{ article.price * orders[article.id].quantity }}</td>
+      {% set total = total + article.price * orders[article.id].quantity %}
   </tr>
   {% endfor %}
+
+  <tr>
+    <td></td>
+    <td></td>
+    <td><strong>Total</strong></td>
+    <td><strong>{{ total }}</strong></td>
+  </tr>
+
 </table>
 {% endblock %}
