--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -39,17 +39,18 @@
                         {% if app.security.token and is_granted('IS_AUTHENTICATED_FULLY') %}
                             <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <span class="glyphicon glyphicon-user"></span> Welcome, {{ app.security.token.user.username }} <b class="caret"></b></a>
+                                <span class="glyphicon glyphicon-user"></span> Bienvenue, {{ app.security.token.user.username }} <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="{{ path('logout') }}">Log out</a></li>
+                                    <li><a href="{{ path('basket') }}"><span class="glyphicon glyphicon-shopping-cart"></span> Votre panier</a></li>
+                                    <li><a href="{{ path('logout') }}"><span class="glyphicon glyphicon-off"></span> Se déconnecter</a></li>
                                 </ul>
                             </li>
                         {% else %}
                             <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <span class="glyphicon glyphicon-user"></span> Not connected <b class="caret"></b></a>
+                                <span class="glyphicon glyphicon-user"></span> Invité <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="{{ path('login') }}">Log in</a></li>
+                                    <li><a href="{{ path('login') }}"><span class="glyphicon glyphicon-off"></span> Se connecter</a></li>
                                 </ul>
                             </li>
                         {% endif %}
