--- a/views/login.html.twig
+++ b/views/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.html.twig' %}
 
-{% block title %}User authentication{% endblock %}
+{% block title %}Connexion{% endblock %}
 
 {% block content %}
 <h2 class="text-center">{{ block('title') }}</h2>
@@ -13,12 +13,12 @@
     <form class="form-signin form-horizontal" role="form" action="{{ path('login_check') }}" method="post">
         <div class="form-group">
             <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-            <input type="text" name="_username" value="{{ last_username }}" class="form-control" placeholder="Enter your username" required autofocus>
+            <input type="text" name="_username" value="{{ last_username }}" class="form-control" placeholder="Entrez votre adresse mail" required autofocus>
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-                <input type="password" name="_password" class="form-control" placeholder="Enter your password" required>
+                <input type="password" name="_password" class="form-control" placeholder="Entrez votre mot de passe" required>
             </div>
         </div>
         <div class="form-group">
