--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -65,7 +65,7 @@
         </nav>
         <div id="content">{% block content %}{% endblock %}</div>
         <footer class="footer">
-            <a href="https://github.com/bpesquet/OC-MicroCMS">NanarStore</a>, le premier site du net à vendre volontairement autant de mauvais films.
+            <a href="http://nanarstore.guyl.me">NanarStore</a>, le premier site du net à vendre volontairement autant de mauvais films.
         </footer>
     </div>
 
