--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -1,15 +1,36 @@
 {% extends "layout.html.twig" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Accueil{% endblock %}
 
 {% block content %}
-{% for article in articles %}
-<article>
-    <h2><a class="articleTitle" href="/article/{{ article.id }}">{{ article.title }}</a></h2>
-    <p>{{ article.description }}</p>
-	<p>{{ article.category }}</p>
-	<img src = '{{app.request.basepath}}/img/{{article.image}}'/>
-	<br/> <p class="label label-primary"> {{article.price}}€ </p>
-</article>
-{% endfor %}
+
+<div class="jumbotron">
+  <div class="container">
+    <h1>Nanarstore</h1>
+    <p>Le premier site du net à vendre volontairement autant de mauvais films ! Venez voir les films les plus hilarants du monde, et agrémentez votre collection !</p>
+    {% if app.security.token == false or is_granted('IS_AUTHENTICATED_FULLY') == false %}
+    <p><a class="btn btn-primary btn-lg" href="/signin" role="button">Inscrivez-vous !</a></p>
+    {% endif %}
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    {% for article in articles %}
+    <div class="col-md-4 gallery">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h2 class="panel-title"><a class="articleTitle" href="/article/{{ article.id }}">{{ article.title }}</a></h2>
+        </div>
+        <div class="panel-body">
+          <p>{{ article.description }}</p>
+      	  <p><strong><a href="/category/{{ article.category }}">{{ article.category }}</a></strong></p>
+      	  <img class="img-thumbnail thumbnail" src="{{app.request.basepath}}/img/{{article.image}}"/>
+      	  <p class="label label-primary"> {{article.price}}€ </p>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+</div>
 {% endblock %}
