--- a/views/category.html.twig
+++ b/views/category.html.twig
@@ -14,7 +14,7 @@
         <div class="panel-body">
           <p>{{ article.description }}</p>
       	  <p><strong><a href="/category/{{ article.category }}">{{ article.category }}</a></strong></p>
-      	  <img class="img-thumbnail thumbnail" src="{{app.request.basepath}}/img/{{article.image}}"/>
+          <a href="/article/{{ article.id }}><img class="img-thumbnail thumbnail" src="{{app.request.basepath}}/img/{{article.image}}"/></a>
       	  <p class="label label-primary"> {{article.price}}€ </p>
         </div>
       </div>
