--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -25,7 +25,7 @@
         <div class="panel-body">
           <p>{{ article.description }}</p>
       	  <p><strong><a href="/category/{{ article.category }}">{{ article.category }}</a></strong></p>
-      	  <a href="/article/{{ article.id }}><img class="img-thumbnail thumbnail" src="{{app.request.basepath}}/img/{{article.image}}"/></a>
+      	  <a href="/article/{{ article.id }}"><img class="img-thumbnail thumbnail" src="{{app.request.basepath}}/img/{{article.image}}"/></a>
       	  <p class="label label-primary"> {{article.price}}€ </p>
         </div>
       </div>
